--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,3 +34,16 @@ jobs:
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-node-app
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull your-dockerhub-name/nodejs-demo-app:latest
+            docker stop nodejs-app || true
+            docker rm nodejs-app || true
+            docker run -d -p 3000:3000 --name nodejs-app your-dockerhub-name/nodejs-demo-app:latest
+
